<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
	android:layout_width="fill_parent"
	android:layout_height="fill_parent">
	
	<TextView
       android:id="@+id/camera_config_title"
	   android:layout_width="fill_parent"
       android:layout_height="wrap_content"
	   android:layout_marginTop="10sp"
	   android:gravity="center_horizontal"
       android:text="@string/camera_config_title_text"
       android:textColor="#0f0"
       android:textSize="26sp"
       android:singleLine="false"
    />
	
	<TextView
       android:id="@+id/camera_config_explanations1"
	   android:layout_width="wrap_content"
	   android:layout_height="wrap_content"
	   android:layout_centerHorizontal="true"
       android:layout_below="@+id/camera_config_title"
       android:layout_marginTop="10sp"
       android:gravity="center_horizontal"
       android:text="@string/camera_config_explanations1_text"
    />

    <TextView
       android:id="@+id/camera_config_explanations2"
       android:layout_width="wrap_content"
       android:layout_height="wrap_content"
       android:layout_centerHorizontal="true"
       android:layout_below="@+id/camera_config_explanations1"
       android:layout_marginTop="10sp"
       android:gravity="center_horizontal"
       android:text="@string/camera_config_explanations2_text"
    />

    <TextView
       android:id="@+id/camera_config_date"
       android:layout_width="wrap_content"
       android:layout_height="wrap_content"
       android:layout_centerHorizontal="true"
       android:textSize="26sp"
       android:layout_below="@+id/camera_config_explanations2"
       android:gravity="center_horizontal"
       android:text="DD, MMMM, YYYY"
    />
    
    <DigitalClock
       android:id="@+id/camera_config_clock"
       android:layout_width="wrap_content"
       android:layout_height="wrap_content"
       android:layout_centerHorizontal="true"
       android:layout_below="@+id/camera_config_date"
       android:layout_marginBottom="10sp"
       android:textSize="26sp"
    />

    <Button
        android:id="@+id/camera_config_done"
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_alignParentBottom="true"
        android:layout_alignParentRight="true"
        android:text="@string/camera_config_done_text"
    />

    <Button
        android:id="@+id/camera_config_later"
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:text="@string/camera_config_later_text"
    />

    <TextView
        android:id="@+id/camera_config_explanations_end"
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_above="@+id/camera_config_done"
        android:gravity="center_horizontal"
        android:text="@string/camera_config_explanations_end_text"
     />
</RelativeLayout>
